# HDiffPatch

./: CMAKE_README.md  CMakeLists.txt  build_unix.sh  build_windows.bat  build_windows_static.bat
